refactor work with db transactions: add middleware; update README, add postgres healtcheck in docker-compose
