# internal/handler/handler.go
@@ -3,19 +3,18 @@ package handler
 import (
 	"github.com/gin-gonic/gin"
 	"github.com/naumov-andrey/avito-intern-assignment/internal/service"
-	"net/http"
-	"strconv"
+	"gorm.io/gorm"
 )
 
 type Handler struct {
-	service *service.Service
+	accountService *service.AccountService
 }
 
-func NewHandler(service *service.Service) *Handler {
-	return &Handler{service}
+func NewHandler(accountService *service.AccountService) *Handler {
+	return &Handler{accountService}
 }
 
-func (h *Handler) Init() *gin.Engine {
+func (h *Handler) InitRoutes(db *gorm.DB) *gin.Engine {
 	router := gin.New()
 
 	api := router.Group("/api/v1")
@@ -23,10 +22,10 @@ func (h *Handler) Init() *gin.Engine {
 		accounts := api.Group("/account")
 		{
 			accounts.GET("/:userId/balance", h.GetBalance)
-			accounts.PUT("/:userId/balance", h.UpdateBalance)
+			accounts.PUT("/:userId/balance", transaction(db), h.UpdateBalance)
 			accounts.GET("/:userId/history", h.GetHistory)
+			accounts.POST("/transfer", transaction(db), h.CreateTransfer)
 		}
-		api.GET("/transfer", h.Transfer)
 	}
 
 	return router
@@ -34,13 +33,4 @@ func (h *Handler) Init() *gin.Engine {
 
 func newErrorResponse(c *gin.Context, code int, message string) {
 	c.AbortWithStatusJSON(code, gin.H{"message": message})
-}
-
-func getUserId(c *gin.Context) (int, error) {
-	userId, err := strconv.Atoi(c.Param("userId"))
-	if err != nil {
-		newErrorResponse(c, http.StatusBadRequest, "User id must be an integer")
-		return 0, err
-	}
-	return userId, nil
 }
